#19 Añadir nueva funcionalidad en el progreso
